# stx-modelsward

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  book.py  pyproject.toml  render.yaml  setup.py
.claude/: CLAUDE.md.j2  settings.json
.claude/commands/: stx-guide.md
.claude/commands/designer/: block-new.md  block-preview.md  slide-audit.md  slide-fix.md  slide-new.md  style-audit.md  style-refactor.md
.claude/commands/developer/: lint.md  test-run.md
.claude/commands/migration/: conversion-audit.md  html-convert-batch.md  html-convert-block.md  html-export.md  html-migrate.md
.claude/commands/project/: collection-new.md  course-generate.md  project-customize.md  project-init.md  project-upgrade.md
.claude/designer/agents/: project-architect.md  slide-designer.md  slide-reviewer.md
.claude/designer/skills/: block-blueprints.md  streamtex-quick-reference.md  style-conventions.md  (+1 more)
.claude/references/: coding_standards.md  streamtex_cheatsheet_en.md
.github/workflows/: ci.yml
.streamlit/: config.toml
blocks/: __init__.py  bck_conclusion.py  bck_discuss_limitations.py  bck_eval_by_level.py  bck_eval_conformance.py  bck_eval_efficiency.py  bck_eval_per_model.py  bck_eval_setup.py  bck_intro_frege.py  bck_intro_gateway.py  bck_intro_problem.py  bck_method_agents.py  bck_method_architecture.py  bck_method_feedback.py  bck_method_instructions.py  bck_method_overview.py  bck_method_protocol.py  bck_method_simulator.py  bck_method_validation.py  bck_questions.py  bck_references.py  bck_related_work.py  bck_title.py
custom/: styles.py  themes.py
(+1 files in other folders)
