[project]
name = "stx-modelsward"
version = "1.0.0"
description = "MODELSWARD 2026 — Agentic BPMN Framework presentation"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["streamtex>=0.3.0"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0", "pre-commit>=3.0"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
streamtex = { path = "../../streamtex", editable = true }

[tool.ruff.lint]
ignore = ["F403", "F405", "E701", "E741"]

[tool.pyright]
extraPaths = ["../../streamtex"]
